# ram-machine

./: Cargo.toml  README.md  code.ram
.github/workflows/: cd.yml  ci.yml  rust.yml
examples/: code.ram  log.ram  sequence_length.ram  square.ram  three_sum.ram  unit_digit.ram
scripts/: before_deploy.sh  fix_Cargo_lock.js
src/: cli.rs  error.rs  instruction.rs  interpreter.rs  lib.rs  main.rs  parser.rs  ram_code.rs  utils.rs
src/parser/: instruction.rs  mod.rs  operand.rs  parser.rs  ram_code.rs
tests/: interpreter.rs  mod.rs  operand.rs  parser.rs
