[package]
name = "ram-machine"
version = "0.2.0"
edition = "2021"
description = "RAM machine code interpreter"
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/kamack38/ram-machine"
keywords = ["cli", "ram", "machine", "maszyna"]
categories = ["command-line-utilities"]

[lib]
name = "ram_machine"
path = "src/lib.rs"
doc = true

[[bin]]
name = "ram"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
thiserror = "1.0.52"
